# hand-password-thing

./: .gitignore  MIGRATION_GUIDE.md  README.md  TASK_10.1_SUMMARY.md  diagnostic.py  pyproject.toml  requirements.txt
.kiro/specs/file-encryption-manager/: .config.kiro  requirements.md  tasks.md
.kiro/specs/predefined-gesture-detection/: .config.kiro  design.md  requirements.md  tasks.md
examples/: file_encryption_app.py
src/: app.py  capture.py  config.py  encryption.py  file_encryption_manager.py  file_registry.py  file_validator.py  gesture.py  gesture_capture.py  main.py  main_window.py  password_store.py  ui.py
tests/: test_encryption.py  test_file_encryption_manager.py  test_file_registry.py  test_main.py  test_main_window.py
