[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-lock"
version = "0.1.0"
description = "Hand gesture password system using MediaPipe."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
